# memory-service

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml
src/memory_service/: config.py  db.py  embedder.py  main.py  models.py
src/memory_service/routers/: entries.py  ingest.py  search.py  sync.py
tests/: conftest.py  test_embedder.py  test_entries.py  test_ingest.py  test_search.py  test_sync.py
