[project]
name = "memory-service"
version = "0.1.0"
description = "Semantic search service for Startup Suite org memory entries"
readme = "README.md"
authors = [
    { name = "Jacob Scott", email = "jacobs.scott0@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sentence-transformers>=3.4",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "pydantic-settings>=2.7",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
